# catBox

./: .dockerignore  .gitignore  AGENTS.md  CONTEXT.md  Dockerfile  README.md  pyproject.toml
.scratch/: prd-thin-model-backend.md
.scratch/model-spike/: issue.md
catbox/: __init__.py  browser_ui.py  env_loader.py  model_backend.py  sd_turbo_runner.py  validate_sd_turbo_runner.py
docs/: manual-gpu-validation.md
docs/adr/: 0001-persistent-model-backend.md  0002-model-backend-owns-outcome-selection.md  0003-generated-outcome-file-references.md  0004-explicit-generation-failure-state.md  0005-ephemeral-generated-outcomes-for-v1.md  0006-non-graphic-dead-cat-outcome.md  0007-single-branch-captured-denoising-trace.md
docs/agents/: domain.md
experiments/model-spike/: README.md  generate.py
experiments/model-spike/results/: summary.md
tests/: test_browser_ui.py  test_manual_validation_docs.py  test_model_backend.py  test_validate_sd_turbo_runner.py
