[project]
name = "catbox"
version = "0.1.0"
description = "Local Catbox diffusion model spike."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.8.0",
    "diffusers>=0.33.0",
    "pillow>=11.0.0",
    "safetensors>=0.5.0",
    "torch==2.5.1",
    "transformers>=4.50.0",
]

[tool.uv]
package = false

[tool.uv.sources]
torch = { index = "pytorch-cu121" }

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true
